@@ -6,3 +6,6 @@ Collector:
 DB:
   - MongoDB updated to 2.4.0
   - Windows 2008 R2 SP1 is now the minimum requirement to install RCS
+  - The intelligence service in installed on every shard
+  - New and improved internal access control on items
+  - Performace improvements
